--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -15,6 +15,10 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-size: 62.5%;
+
+  @media (max-width: 1680px) {
+    font-size: 50%;
+  }
 }
 
 body {
