--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -15,12 +15,16 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-size: 62.5%;
+
+  @media (max-width: 1680px) {
+    font-size: 50%;
+  }
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-pretendard);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
